--- a/supreme_paper_products_website_index.html
+++ b/supreme_paper_products_website_index.html
@@ -50,7 +50,7 @@
     <header>
       <div class="brand">
         <!-- Replace src with your company logo URL (LinkedIn or uploaded hosted image) -->
-        <img src="/assets/logo.png" alt="Supreme Paper Products logo" onerror="this.style.opacity=.5" />
+        <img src="C:\Users\ashmithavairavan\Desktop\Website\assets" alt="Supreme Paper Products logo" onerror="this.style.opacity=.5" />
         <div>
           <div style="font-weight:800;color:var(--black)">Supreme Paper Products</div>
           <div style="font-size:12px;color:rgba(0,0,0,0.6)">Sustainable paper tubes & composite containers</div>
